--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxtjs/eslint-module": "^4.1.0",
     "@nuxtjs/google-fonts": "^3.0.0-0",
     "@nuxtjs/i18n": "^10.1.1",
+    "@pinia/nuxt": "^0.11.2",
     "@stomp/stompjs": "^7.2.1",
     "@types/fabric": "^5.3.10",
     "@types/node": "^24.9.1",
@@ -45,6 +46,8 @@
     "nuxt": "^3.19.3",
     "nuxt-recaptcha": "^0.0.7",
     "pdfjs-dist": "^5.4.296",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "prettier": "^3.6.2",
     "qrcode": "^1.5.4",
     "sanitize-html": "^2.17.0",
