--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@vee-validate/rules": "^4.15.1",
     "@vite-pwa/nuxt": "^1.0.7",
     "@vuepic/vue-datepicker": "^11.0.3",
+    "@vueuse/core": "^14.0.0",
+    "@vueuse/nuxt": "^14.0.0",
     "better-sqlite3": "^12.4.1",
     "body-parser": "^2.2.0",
     "canvas": "^3.2.0",
